--- a/invitacion.html
+++ b/invitacion.html
@@ -48,6 +48,52 @@
     background:rgba(255,255,255,.62);
     z-index:0; pointer-events:none;
   }
+ .direccionBox{
+  background: #e6b97a;   /* tono beige */
+  padding: 24px;
+  border-radius: 28px;
+  text-align: center;
+  max-width: 360px;
+  margin: 0 auto;
+  font-family: 'Patrick Hand', cursive;
+}
+
+.direccionBox h3{
+  margin: 0 0 10px;
+  font-size: 22px;
+}
+
+.direccionTexto{
+  font-size: 16px;
+  line-height: 1.4;
+  margin-bottom: 14px;
+}
+
+.mapBox{
+  width: 100%;
+  height: 160px;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-bottom: 14px;
+}
+
+.mapBox iframe{
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.btnMapa{
+  display: inline-block;
+  padding: 8px 18px;
+  background: #f5d7a5;
+  color: #5a3b1d;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,.15);
+}
+
 
   .content{
     position:relative;
@@ -320,6 +366,30 @@
               <div class="countNote" id="cdNote"></div>
             </div>
           </div>
+
+         <div class="direccionBox">
+  <h3>Recepción</h3>
+
+  <p class="direccionTexto">
+    “Lavic eventos infantiles”<br>
+    Daniel Peña San 2764<br>
+    Cochabamba, Bolivia
+  </p>
+
+  <div class="mapBox">
+    <iframe 
+      src="https://www.google.com/maps?q=Daniel%20Peña%20San%202764%20Cochabamba&output=embed"
+      loading="lazy">
+    </iframe>
+  </div>
+
+  <a href="https://maps.google.com/?q=Daniel+Peña+San+2764+Cochabamba"
+     target="_blank"
+     class="btnMapa">
+    Mapa de ubicación
+  </a>
+</div>
+
 
           <!-- Más contenido opcional -->
           <section class="card">
