--- a/invitacion.html
+++ b/invitacion.html
@@ -371,9 +371,9 @@
   <h3>Recepción</h3>
 
   <p class="direccionTexto">
-    “Lavic eventos infantiles”<br>
-    Daniel Peña San 2764<br>
-    Cochabamba, Bolivia
+    “Mz. G lote !9”<br>
+    Urb. Los Lirios<br>
+    Lima, SMP
   </p>
 
   <div class="mapBox">
