--- a/invitacion.html
+++ b/invitacion.html
@@ -133,6 +133,7 @@
   font-size: 15px;
   box-shadow: 0 4px 10px rgba(0,0,0,.15);
 }
+ 
 
 
   .content{
@@ -433,15 +434,25 @@
 </div>
 
 
-              <strong>WhatsApp:</strong> <a href="https://wa.me/51923810888" target="_blank" rel="noopener">+51 923 810 888</a>
-            </div>
+              <div class="confirmacionBox">
 
-            <div class="btnRow">
-              <a class="btn btnPrimary"
-                 href="https://wa.me/51923810888?text=Hola%20Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo%20%F0%9F%8E%89"
-                 target="_blank" rel="noopener">Confirmar</a>
-              <a class="btn" href="index.html">Portada</a>
-            </div>
+  <div class="iconoCarta">✉️</div>
+
+  <h3 class="tituloConfirmacion">Confirmación</h3>
+
+  <p class="textoConfirmacion">
+    Nos encantaría saber que nos acompañas.<br>
+    Por favor confirma tu asistencia.
+  </p>
+
+  <a href="https://wa.me/51999999999?text=Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo"
+     target="_blank"
+     class="btnConfirmar">
+    Confirmar asistencia
+  </a>
+
+</div>
+
           </section>
 
           <div style="height:30px;"></div>
