--- a/invitacion.html
+++ b/invitacion.html
@@ -134,6 +134,60 @@
   box-shadow: 0 4px 10px rgba(0,0,0,.15);
 }
  
+.confirmacionBox{
+  max-width: 360px;
+  margin: 40px auto;
+  padding: 28px 22px;
+  border-radius: 34px;
+  text-align: center;
+  font-family: 'Patrick Hand', cursive;
+  color: #6B4A2B;
+
+  /* 🎨 Fondo elegante */
+  background:
+    radial-gradient(circle at top right, #FFF6E8 0%, transparent 45%),
+    radial-gradient(circle at bottom left, #BFDDE6 0%, transparent 40%),
+    linear-gradient(180deg, #E8C27A 0%, #E5B96D 100%);
+
+  box-shadow: 0 14px 35px rgba(0,0,0,.18);
+}
+
+.iconoCarta{
+  font-size: 30px;
+  margin-bottom: 6px;
+}
+
+.tituloConfirmacion{
+  font-size: 22px;
+  margin: 0 0 10px;
+}
+
+.textoConfirmacion{
+  font-size: 15.5px;
+  line-height: 1.45;
+  margin-bottom: 18px;
+}
+
+.btnConfirmar{
+  display: inline-block;
+  padding: 12px 22px;
+  background: #BFDDE6;          /* celeste elefante */
+  color: #6B4A2B;
+  border-radius: 18px;
+  text-decoration: none;
+  font-size: 15px;
+  box-shadow:
+    inset 0 -3px 0 rgba(0,0,0,.12),
+    0 6px 14px rgba(0,0,0,.15);
+  transition: transform .2s ease, box-shadow .2s ease;
+}
+
+.btnConfirmar:hover{
+  transform: scale(1.05);
+  box-shadow:
+    inset 0 -3px 0 rgba(0,0,0,.15),
+    0 10px 20px rgba(0,0,0,.2);
+}
 
 
   .content{
