--- a/invitacion.html
+++ b/invitacion.html
@@ -509,7 +509,7 @@
     </iframe>
   </div>
 
-  <a href="https://maps.google.com/?q=Daniel+Peña+San+2764+Cochabamba"
+  <a href="https://maps.app.goo.gl/yTGpP9FsA7zqymEf9"
      target="_blank"
      class="btnMapa">
     Mapa de ubicación
