--- a/invitacion.html
+++ b/invitacion.html
@@ -527,6 +527,15 @@
             <img src="img/elefante-nombre.png" alt="Imagen temática">
           </div>
 
+          <!-- 🐘 ELEFANTE (VA AQUÍ) -->
+<div class="heroImgWrap">
+  <img
+    src="img/elefante-nombre.png"
+    alt="Elefantito"
+    class="heroImg bounceElephant"
+  >
+</div>
+
           <!-- Padres + fecha + contador -->
           <div class="parentsBlock">
             <div class="parentsPhoto">
